hide warnings temporarely

--- a/.github/workflows/update_stats.yml
+++ b/.github/workflows/update_stats.yml
@@ -47,3 +47,7 @@ jobs:
         #
         # Show most starred and random repos
         plugin_repositories: yes
+        #
+        # Temporary fix for lowlighter/metrics#1222
+        extras_css: |
+          .field.warning { display: none; }
